@@ -1,4 +1,5 @@
 2016-06-10  Kirit Saelensminde  <kirit@felspar.com>
+ * Add a `fostlib::json::get` overload that can be given a default to substitute if the value doesn't exist.
  * Add a coercion for the `sprintf` used in JSON unparsing. This should make it safer on a variety of platforms.
 
 2016-03-25  Kirit Saelensminde  <kirit@felspar.com>
